# anon-analyze

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README  README.md  app.py  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-release.yml  nightly-rescan.yml  release.yml
scripts/: release.py
src/anon_analyze/: app.py  config.py  entrypoint.py  tls_utils.py
src/anon_analyze/static/css/: styles.css
src/anon_analyze/templates/: index.html
templates/: index.html
tests/: test_app.py  test_config.py
