[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anon-analyze"
version = "1.4.0"
requires-python = ">=3.11"
description = "Provides a front-end for anonymous user usage of Spectra Analyze"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["anon_analyze"]

[tool.setuptools.package-data]
anon_analyze = [
  "templates/*.html",
  "static/css/*.css",
  "static/images/*"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
